# docs/swagger.json
@@ -36,14 +36,6 @@
                 "summary": "Change password",
                 "parameters": [
                     {
-                        "type": "string",
-                        "default": "Bearer \u003cyour-login-token\u003e",
-                        "description": "string",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
                         "description": "Change Password Request",
                         "name": "request",
                         "in": "body",
@@ -96,16 +88,6 @@
                     "Authentication"
                 ],
                 "summary": "Logout user",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "default": "Bearer \u003cyour-login-token\u003e",
-                        "description": "string",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -143,15 +125,6 @@
                     "Users"
                 ],
                 "summary": "Get current user",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer Token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -205,13 +178,6 @@
                 ],
                 "summary": "Refresh access token",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer Token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "description": "refresh token",
                         "name": "request",
@@ -374,6 +340,11 @@
         },
         "/users/{id}": {
             "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Updates user profile.",
                 "consumes": [
                     "application/json"
@@ -386,14 +357,6 @@
                 ],
                 "summary": "Update user",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "default": "Bearer \u003cyour-login-token\u003e",
-                        "description": "string",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "type": "string",
                         "description": "User ID",
@@ -760,6 +723,14 @@
                     "type": "boolean"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "description": "Enter your JWT token in the format: Bearer \u003cyour-token\u003e",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
